lab6/workspace2/.metadata/.plugins/org.eclipse.cdt.ui/mb_usb.build.log
17:40:07 **** Build of configuration Debug for project mb_usb ****
make all 
'Building file: ../src/lw_usb/HID.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/HID.o" -IC:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/HID.d" -MT"src/lw_usb/HID.o" -o "src/lw_usb/HID.o" "../src/lw_usb/HID.c"
../src/lw_usb/HID.c:9:1: warning: braces around scalar initializer
    9 | HID_DEVICE hid_device = { { 0 } };
      | ^~~~~~~~~~
../src/lw_usb/HID.c:9:1: note: (near initialization for 'hid_device.addr')
'Finished building: ../src/lw_usb/HID.c'
' '
'Building file: ../src/lw_usb/MAX3421E.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/MAX3421E.o" -IC:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/MAX3421E.d" -MT"src/lw_usb/MAX3421E.o" -o "src/lw_usb/MAX3421E.o" "../src/lw_usb/MAX3421E.c"
In file included from C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
../src/lw_usb/MAX3421E.c: In function 'SPI_init':
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:44:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   44 | #define XST_DEVICE_NOT_FOUND            2L
      |                                         ^~
../src/lw_usb/MAX3421E.c:38:24: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   38 |                 return XST_DEVICE_NOT_FOUND;
      |                        ^~~~~~~~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
In file included from C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:43:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   43 | #define XST_FAILURE                     1L
      |                                         ^~
../src/lw_usb/MAX3421E.c:44:24: note: in expansion of macro 'XST_FAILURE'
   44 |                 return XST_FAILURE;
      |                        ^~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAXreg_wr':
../src/lw_usb/MAX3421E.c:80:42: warning: passing argument 2 of 'XSpi_Transfer' from incompatible pointer type [-Wincompatible-pointer-types]
   80 |     int St = XSpi_Transfer(&SpiInstance, &wr, &rd, 2);
      |                                          ^~~
      |                                          |
      |                                          BYTE (*)[2] {aka unsigned char (*)[2]}
In file included from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:814:42: note: expected 'u8 *' {aka 'unsigned char *'} but argument is of type 'BYTE (*)[2]' {aka 'unsigned char (*)[2]'}
  814 | int XSpi_Transfer(XSpi *InstancePtr, u8 *SendBufPtr, u8 *RecvBufPtr,
      |                                      ~~~~^~~~~~~~~~
../src/lw_usb/MAX3421E.c:80:47: warning: passing argument 3 of 'XSpi_Transfer' from incompatible pointer type [-Wincompatible-pointer-types]
   80 |     int St = XSpi_Transfer(&SpiInstance, &wr, &rd, 2);
      |                                               ^~~
      |                                               |
      |                                               BYTE (*)[2] {aka unsigned char (*)[2]}
In file included from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:814:58: note: expected 'u8 *' {aka 'unsigned char *'} but argument is of type 'BYTE (*)[2]' {aka 'unsigned char (*)[2]'}
  814 | int XSpi_Transfer(XSpi *InstancePtr, u8 *SendBufPtr, u8 *RecvBufPtr,
      |                                                      ~~~~^~~~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAXbytes_wr':
../src/lw_usb/MAX3421E.c:122:46: warning: passing argument 2 of 'XSpi_Transfer' from incompatible pointer type [-Wincompatible-pointer-types]
  122 |         int St = XSpi_Transfer(&SpiInstance, &val, &rd, 2+nbytes);
      |                                              ^~~~
      |                                              |
      |                                              BYTE (*)[(int)nbytes + 1] {aka unsigned char (*)[(int)nbytes + 1]}
In file included from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:814:42: note: expected 'u8 *' {aka 'unsigned char *'} but argument is of type 'BYTE (*)[(int)nbytes + 1]' {aka 'unsigned char (*)[(int)nbytes + 1]'}
  814 | int XSpi_Transfer(XSpi *InstancePtr, u8 *SendBufPtr, u8 *RecvBufPtr,
      |                                      ~~~~^~~~~~~~~~
../src/lw_usb/MAX3421E.c:122:52: warning: passing argument 3 of 'XSpi_Transfer' from incompatible pointer type [-Wincompatible-pointer-types]
  122 |         int St = XSpi_Transfer(&SpiInstance, &val, &rd, 2+nbytes);
      |                                                    ^~~
      |                                                    |
      |                                                    BYTE (*)[2] {aka unsigned char (*)[2]}
In file included from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:814:58: note: expected 'u8 *' {aka 'unsigned char *'} but argument is of type 'BYTE (*)[2]' {aka 'unsigned char (*)[2]'}
  814 | int XSpi_Transfer(XSpi *InstancePtr, u8 *SendBufPtr, u8 *RecvBufPtr,
      |                                                      ~~~~^~~~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAXreg_rd':
../src/lw_usb/MAX3421E.c:154:5: error: unknown type name 'Byte'
  154 |     Byte rval;
      |     ^~~~
../src/lw_usb/MAX3421E.c:158:48: warning: passing argument 3 of 'XSpi_Transfer' from incompatible pointer type [-Wincompatible-pointer-types]
  158 |     int St = XSpi_Transfer(&SpiInstance, &reg, &rval, 2);
      |                                                ^~~~~
      |                                                |
      |                                                int *
In file included from ../src/lw_usb/MAX3421E.c:14:
C:/Users/user/OneDrive/Documents/ECE385/ECE385/lab6/workspace2/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:814:58: note: expected 'u8 *' {aka 'unsigned char *'} but argument is of type 'int *'
  814 | int XSpi_Transfer(XSpi *InstancePtr, u8 *SendBufPtr, u8 *RecvBufPtr,
      |                                                      ~~~~^~~~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_Task':
../src/lw_usb/MAX3421E.c:343:46: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
  343 |         if (XGpio_DiscreteRead(&Gpio_int, 1) & 0x01 == 0) {
      |                                              ^
../src/lw_usb/MAX3421E.c: In function 'MaxGpxHandler':
../src/lw_usb/MAX3421E.c:379:14: warning: variable 'GPINIRQ' set but not used [-Wunused-but-set-variable]
  379 |         BYTE GPINIRQ;
      |              ^~~~~~~
make: *** [src/lw_usb/subdir.mk:26: src/lw_usb/MAX3421E.o] Error 1

17:40:08 Build Finished (took 904ms)

